Changed snack player height value to fix cut off

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -1714,7 +1714,7 @@ html[data-theme="dark"] .docsRating {
 /* Snack Player */
 
 .snack-player {
-  height: 544px;
+  height: 740px;
   width: 100%;
   overflow: hidden;
   margin-bottom: 24px;
